[package]
authors = ["Daniel Wiesenberg <daniel@simplificAR.io>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for Rocket.rs"
documentation = "https://docs.rs/async-graphql/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "rocket"]
license = "MIT OR Apache-2.0"
name = "async-graphql-rocket"
repository = "https://github.com/async-graphql/async-graphql"
version = "7.0.11"

[dependencies]
async-graphql.workspace = true

rocket = { git = "https://github.com/rwf2/Rocket", rev = "3bf9ef02d6e803fe9f753777f5a829dda6d2453d", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio-util = { workspace = true, default-features = false, features = [
  "compat",
] }
